--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,277 @@
-flask
-flask-socketio
-pandas
-requests
-openpyxl
-beautifulsoup4
-eventlet
+abstract_singleton==1.0.1
+aiodns==3.0.0
+aiofiles==22.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+aiosqlite==0.19.0
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+async-generator==1.10
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==23.1.0
+auto_gpt_plugin_template==0.0.2
+autoflake==2.1.1
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bidict==0.23.1
+binance==0.3
+binance-spot==1.0.0.dev0
+black==23.3.0
+bleach==6.0.0
+blinker==1.9.0
+blis==0.7.9
+cachetools==5.3.0
+catalogue==2.0.8
+ccxt==3.0.78
+certifi==2022.12.7
+cffi==1.15.1
+cfgv==3.3.1
+chardet==5.1.0
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+comm==0.1.3
+confection==0.0.4
+coverage==7.2.3
+cryptography==40.0.2
+cssselect==1.2.0
+cymem==2.0.7
+dateparser==1.1.8
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+distro==1.8.0
+dnspython==2.3.0
+docker==6.0.1
+duckduckgo-search==2.8.6
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl#sha256=35365d49d389ecb19ba33119dca9ab9ff80b36fbeb063fa5d44008197fead8fa
+et_xmlfile==2.0.0
+eventlet==0.39.0
+exceptiongroup==1.1.1
+executing==1.2.0
+fastjsonschema==2.16.3
+ffmpeg-python==0.2.0
+filelock==3.12.0
+flake8==6.0.0
+Flask==3.1.0
+Flask-SocketIO==5.5.1
+fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2024.12.0
+future==0.18.3
+ghp-import==2.1.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-api-core==2.11.0
+google-api-python-client==2.86.0
+google-auth==2.17.3
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.0
+greenlet==3.1.1
+gTTS==2.3.1
+h11==0.14.0
+httpcore==0.17.0
+httplib2==0.22.0
+httpx==0.24.0
+huggingface-hub==0.27.0
+identify==2.5.22
+idna==3.4
+iniconfig==2.0.0
+ipykernel==6.22.0
+ipython==8.12.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+isort==5.12.0
+itsdangerous==2.2.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.4.2
+json5==0.9.11
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter-ydoc==0.2.4
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyter_server==2.5.0
+jupyter_server_fileid==0.9.0
+jupyter_server_terminals==0.4.4
+jupyter_server_ydoc==0.8.0
+jupyterlab==3.6.3
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.22.1
+jupyterlab_widgets==3.0.13
+langcodes==3.3.0
+llvmlite==0.40.1rc1
+loguru==0.7.0
+lxml==4.9.2
+Markdown==3.3.7
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mergedeep==1.3.4
+mistune==2.0.5
+mkdocs==1.4.2
+more-itertools==9.1.0
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.9
+mypy-extensions==1.0.0
+nbclassic==0.5.5
+nbclient==0.7.3
+nbconvert==7.3.1
+nbformat==5.8.0
+nest-asyncio==1.5.6
+networkx==3.1
+nodeenv==1.7.0
+notebook==6.5.4
+notebook_shim==0.2.2
+numba==0.57.0
+numpy==1.24.2
+oauthlib==3.2.2
+openai==0.27.2
+openai-whisper @ git+https://github.com/openai/whisper.git@25639fc17ddc013d56c594bfbf7644f2185fad84
+openapi-python-client==0.13.4
+openpyxl==3.1.5
+orjson==3.8.10
+outcome==1.2.0
+packaging==23.1
+pandas==2.0.0
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.1
+pathy==0.10.1
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pinecone-client==2.2.1
+platformdirs==3.2.0
+playsound==1.2.2
+pluggy==1.0.0
+pre-commit==3.2.2
+preshed==3.0.8
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==4.22.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycares==4.3.0
+pycodestyle==2.10.0
+pycparser==2.21
+pycryptodome==3.17
+pydantic==1.10.7
+pyflakes==3.0.1
+Pygments==2.15.1
+pymdown-extensions==9.11
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+PyPDF2==3.0.1
+pypdfium2==4.30.1
+pyrsistent==0.19.3
+PySocks==1.7.1
+pytest==7.3.1
+pytest-asyncio==0.21.0
+pytest-benchmark==4.0.0
+pytest-cov==4.0.0
+pytest-integration==0.2.3
+pytest-mock==3.10.0
+pytest-recording==0.12.2
+python-binance==1.0.17
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-engineio==4.11.2
+python-json-logger==2.0.7
+python-socketio==5.12.1
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyyaml_env_tag==0.1
+pyzmq==25.0.2
+readability-lxml==0.8.1
+redis==4.5.4
+regex==2023.3.23
+requests==2.28.2
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.6.0
+scipy==1.14.1
+selenium==4.1.4
+Send2Trash==1.8.0
+sentence-transformers==3.3.1
+shellingham==1.5.0.post1
+simple-websocket==1.1.0
+six==1.16.0
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+spacy==3.4.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.6
+stack-data==0.6.2
+sympy==1.12
+ta==0.11.0
+terminado==0.17.1
+thinc==8.1.9
+threadpoolctl==3.5.0
+tiktoken==0.3.1
+tinycss2==1.2.1
+tokenizers==0.21.0
+tomli==2.0.1
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tornado==6.3.1
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.47.1
+trio==0.22.0
+trio-websocket==0.10.2
+tweepy==4.13.0
+typer==0.7.0
+typing_extensions==4.9.0
+tzdata==2023.3
+tzlocal==4.3
+ujson==5.7.0
+uri-template==1.2.0
+uritemplate==4.1.1
+urllib3==1.26.15
+urllib3-secure-extra==0.1.0
+vcrpy==4.2.1
+virtualenv==20.22.0
+wasabi==0.10.1
+watchdog==3.0.0
+wcwidth==0.2.6
+webcolors==1.13
+webdriver-manager==3.8.6
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==11.0.2
+Werkzeug==3.1.3
+widgetsnbextension==4.0.13
+wrapt==1.15.0
+wsproto==1.2.0
+y-py==0.5.9
+yarl==1.8.2
+ypy-websocket==0.8.2
